kube-developper-workshop/gitops/base/frontend/service.yaml
kind: Service
apiVersion: v1

metadata:
  name: frontend

spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
